# vita49-rs

./: .conform.yaml  .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
cxx_demo/: .gitignore  Cargo.toml  README.md  build.rs
cxx_demo/include/: my_vrt.h
cxx_demo/src/: main.cc  main.rs
vita49/: Cargo.toml
vita49/benches/: parse_bench.rs
vita49/examples/: json2vrt.rs  udp_recv.rs  udp_send.rs
vita49/examples/nats_control/: Cargo.toml  README.md
vita49/examples/nats_control/src/: controllee.rs  controller.rs
vita49/src/: ack.rs  ack_response.rs  cancellation.rs  cif0.rs  cif1.rs  cif2.rs  cif3.rs  cif7.rs  class_id.rs  command.rs  command_payload.rs  context.rs  context_association_lists.rs  control.rs  control_ack_mode.rs  device_id.rs  ecef_ephemeris.rs  errors.rs  formatted_gps.rs  gain.rs  gps_ascii.rs  lib.rs  packet_header.rs  payload.rs  query_ack.rs  signal_data.rs  spectrum.rs  threshold.rs  trailer.rs  vrt.rs
vita49/tests/: ack_packet.json5  command_packet.json5  command_packet.vrt  command_packet.vrt.license  context_packet.json5  context_packet.vrt  integration_test.rs  spectral_data_packet.json5  spectral_data_packet.vrt
vita49_macros/: .gitignore  Cargo.toml  README.md
vita49_macros/src/: ack_field.rs  cif_basic.rs  cif_field.rs  cif_fields.rs  cif_radix.rs  cif_radix_masked.rs  lib.rs  todo_cif_field.rs
